Ready for Railway deploy

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ python-dotenv = "*"
 psycopg2-binary = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = {extras = ["blacklist"], version = "*"}
+gunicorn = "*"
 
 [dev-packages]
 
